--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,33 @@
+@font-face {
+  font-family: "Work Sans Black";
+  src: url("/fonts/WorkSans-Black.ttf");
+}
+
+@font-face {
+  font-family: "Work Sans Light";
+  src: url("/fonts/WorkSans-Light.ttf");
+}
+
+@font-face {
+  font-family: "Work Sans Bold";
+  src: url("/fonts/WorkSans-Bold.ttf");
+}
+
+@font-face {
+  font-family: "Work Sans";
+  src: url("/fonts/WorkSans-Regular.ttf");
+}
+
+@font-face {
+  font-family: "Work Sans Thin";
+  src: url("/fonts/WorkSans-Thin.ttf");
+}
+
+@font-face {
+  font-family: "Work Sans Medium";
+  src: url("/fonts/WorkSans-Medium.ttf");
+}
+
 html,
 body {
   padding: 0;
@@ -14,3 +44,4 @@ a {
 * {
   box-sizing: border-box;
 }
+
