empty packages were fixed

--- a/styles/Packages.module.scss
+++ b/styles/Packages.module.scss
@@ -41,7 +41,8 @@ $text-padding: 22px;
         margin: 0;
     }
     
-    .text{
+    .smallText{
+        margin-left: 0;
         padding-bottom: $text-padding;
         width: 576px;
     }
