logo was added. mongo api was created

--- a/styles/AuthFormBoilerplate.module.scss
+++ b/styles/AuthFormBoilerplate.module.scss
@@ -31,6 +31,12 @@
             padding: 0;
             background-color: $text-color;
         }
+        &.error{
+            background-color: red;
+            &::placeholder{
+                color: white;
+            }
+        }
     }
     button{
         @include buttonInput();
