--- a/styles/Footer.module.scss
+++ b/styles/Footer.module.scss
@@ -94,7 +94,7 @@
     width: 340px;
 }
 
-.footer svg:hover path{
-    transition-duration: 0.4s;
-    fill: $text-color;
-}
+// .footer svg:hover path{
+//     // transition-duration: 0.4s;
+//     // fill: $text-color;
+// }
