--- a/styles/Header.module.scss
+++ b/styles/Header.module.scss
@@ -82,10 +82,10 @@
     cursor: auto;
 }
 
-.header .logo:hover path, .header .logo:hover rect{
-    transition-duration: 0.4s;
-    fill: #ffffff;
-}
+// .header .logo:hover path, .header .logo:hover rect{
+//     transition-duration: 0.4s;
+//     fill: #ffffff;
+// }
 
 .logoText{
     font: normal normal 300 16px/24px "Work Sans Light";
