--- a/styles/Cennik.module.scss
+++ b/styles/Cennik.module.scss
@@ -62,6 +62,7 @@
 }
 
 @mixin barItem {
+    position: relative;
     padding: 18px 37px;
     border-top: 2px solid $main-color;
     border-bottom: 2px solid $main-color;
@@ -74,6 +75,13 @@
     transition-duration: 0.4s;
     &:first-child{
         border-left: 2px solid $main-color;
+    }
+    &::after {
+        content: ''; 
+        position: absolute; /* Абсолютное позиционирование */
+        left: 47%; bottom: -35px; /* Положение треугольника */
+        border: 13px solid transparent; /* Прозрачные границы */
+        border-top: 20px solid $main-color; /* Добавляем треугольник */
     }
 }
 
@@ -100,22 +108,49 @@
     margin-bottom: 100px;
 }
 
-.block{
+@mixin cennik-block{
     display: flex;
     flex-direction: column;
     align-items: center;
     border: $border;
     border-width: 2px;
     width: 400px;
+    transition-duration: 0.3s;
     &:hover{
         border: 2px solid $main-color;
-    }
+        transform: translateY(-15px);
+        // transform: scale(1.05);
+        -webkit-box-shadow: 0px 15px 10px 6px rgba(0,0,0,0.75); 
+        box-shadow: 0px 15px 10px 6px rgba(0,0,0,0.75);
+    } 
+}
+
+.block{
+    @include cennik-block();
+}
+
+.mainBlock{
+    @include cennik-block();
+    background-color: $main-color;
+    position: relative;
+}
+
+.slash{
+    position: absolute;
+    right: 10.5rem;
+    top: -15rem;
+    color: rgb(226, 204, 0);
+    // opacity: 0.1;
+    font-size: 30rem;
+    font-weight: bolder;
+    letter-spacing: -10rem;
 }
 
 .blockTitle{
     font: normal normal 24px/28px "Work Sans Medium";
     color: $text-color;
     padding-top: 38px;
+    z-index: 1;
 }
 
 .digit{
@@ -123,6 +158,7 @@
     letter-spacing: 4px;
     color: $text-color;
     padding-top: 60px;
+    z-index: 1;
 }
 
 .afterDigit{
@@ -130,6 +166,7 @@
     letter-spacing: 0.64px;
     color: $text-color;
     padding-top: 25px;
+    z-index: 1;
 }
 
 .blockLinkButton{
@@ -137,6 +174,7 @@
     margin: 0;
     margin-top: 20px;
     background-color: $main-color;
+    z-index: 1;
     &:hover{
         background-color: $text-color;
         a{
@@ -151,4 +189,5 @@
     color: $text-color;
     padding: 0 41px;
     padding-top: 50px;
+    z-index: 1;
 }
