cennik and wynajecie pages were changed

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -387,8 +387,9 @@
 }
   
 .middleText{
-    margin-left: 147px;
-    margin-right: 262px;
+    // margin-left: 147px;
+    // margin-right: 262px;
+    margin-left: 15%;
     margin-top: 165px;
     max-width: 1031px;
     p{
