--- a/styles/Hiring.module.scss
+++ b/styles/Hiring.module.scss
@@ -1,7 +1,12 @@
 @import './Varablies.scss';
 
+.rightBarWrapper{
+    position: relative;
+    background-color: $main-color;   
+}
+
 .rightbar{
-    width: 600px;
+    width: 520px;
     height: 750px;
     background-color: $main-color;
     padding-left: 34px;
@@ -13,9 +18,8 @@
     height: 150px;
     width: 100%;
     border-bottom: 1px solid #ffffff;
-    background-color: $main-color;   
     padding-top: 53px;
-
+    background-color: $main-color;   
 }
 
 .rightBarTopBtn{
@@ -27,7 +31,7 @@
     // margin-top: 53px;
 }
 
-.profilBtn{
+.profilBtn, .nextBtn{
     @include buttonInput();
     background-color: $text-color;
     width: 178px;
@@ -45,8 +49,15 @@
     }
 }
 
+.nextBtn{
+    position: fixed;
+    bottom: 5%;
+    margin-left: 0;
+}
+
 .progressBar{
     display: flex;
+    position: fixed;
 }
 
 @mixin progressBarNumber{
@@ -96,21 +107,27 @@
 }
 
 .rightBarTitle{
-    margin-top: 41px;
+    position: fixed;
+    margin-top: 64px;
     font: normal normal 900 35px/42px "Work Sans Black";
     letter-spacing: 0px;
     color: #FFFFFF;
     text-transform: capitalize;
 }
 
+.hiringChoiceProps{
+    margin-top: 0px;
+}
+
 .hiringChoicesDiv{
-    margin-top: 11px;
+    position: fixed;
+    margin-top: 120px;
 }
 
 .hiringChoice{
     width: 325px;
     min-height: 44px;
-    margin-top: 27px;  
+    margin-top: 1rem;  
 }
 
 .hiringChoiceTitle{
