--- a/styles/Ksiegowosc.module.scss
+++ b/styles/Ksiegowosc.module.scss
@@ -52,7 +52,8 @@
     }
     .blocks{
         @include blocks(107px);
-        margin-right: 50px;
+        margin-right: 0px;
+        max-width: 1500px;
         .blockTitle{
             padding-top: 33px;   
             width: 260px;
