--- a/styles/SelectOption.module.scss
+++ b/styles/SelectOption.module.scss
@@ -1,6 +1,40 @@
 @import './Varablies.scss';
 
+@mixin block{
+    cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: $border;
+    border-width: 2px;
+    width: 32%;
+    // max-width: 400px;
+    transition-duration: 0.3s;
+    &:hover{
+        border: 2px solid $main-color;
+        transform: translateY(-15px);
+        // transform: scale(1.05);
+        -webkit-box-shadow: 0px 15px 10px 6px rgba(0,0,0,0.75); 
+        box-shadow: 0px 15px 10px 6px rgba(0,0,0,0.75);
+    } 
+}
+
+.selectedOption{
+    @include block();
+    background-color: $main-color;
+    position: relative;
+    border: 2px solid $main-color;
+    transform: translateY(-15px);
+    // transform: scale(1.05);
+    -webkit-box-shadow: 0px 15px 10px 6px rgba(0,0,0,0.75); 
+    box-shadow: 0px 15px 10px 6px rgba(0,0,0,0.75);
+    @include regular();
+    color: white;
+    background-color: $main-color;
+}
+
 .option{
+    @include block();
     @include regular();
     color: #411141;
     &:hover{
@@ -8,11 +42,19 @@
     }
 }
 
-.selectedOption{
-    @include regular();
-    color: white;
-    background-color: $main-color;
-}
+// .option{
+//     @include regular();
+//     color: #411141;
+//     &:hover{
+//         border: 1px solid $text-color;
+//     }
+// }
+
+// .selectedOption{
+//     @include regular();
+//     color: white;
+//     background-color: $main-color;
+// }
 
 .options{
     display: flex;
