--- a/styles/globals.css
+++ b/styles/globals.css
@@ -36,6 +36,7 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  width: auto;
 }
 
 a {
@@ -197,7 +198,26 @@ a {
   z-index: 0;
 }
 
+.ant-checkbox-checked .ant-checkbox-inner{
+  background-color: white;
+  border-color: #121109;
+}
 
+.ant-checkbox-inner::after{
+  border-color: #121109 !important;
+}
+
+.ant-checkbox-wrapper:hover .ant-checkbox-inner, .ant-checkbox:hover .ant-checkbox-inner{
+  border-color: #E2C700;
+}
+
+.ant-checkbox-input:focus + .ant-checkbox-inner{
+  border-color: #121109 !important;
+}
+
+.ant-checkbox-checked::after{
+  border-color: #E2C700 !important;
+}
 
 /* rozliczenia */
 .rozliczeniaSelect .ant-select-selector{
