log in and /konto/dane were repaired.

--- a/styles/AuthFormBoilerplate.module.scss
+++ b/styles/AuthFormBoilerplate.module.scss
@@ -42,6 +42,11 @@
         @include buttonInput();
         padding: 0;
         background-color: $text-color;
+        &:disabled{
+            background-color: $main-color;
+            color: $main-color;
+            cursor: auto;
+        }
     }
 }
 
