--- a/styles/Varablies.scss
+++ b/styles/Varablies.scss
@@ -5,8 +5,10 @@ $sidebar-width: 150px;
 $border: 1px solid #B9B9B9;
 
 $main-color: #E2C700;
+// $main-color: rgb(76, 99, 226);
 
 $solid-color: #CDAD00;
+// $solid-color: rgb(38, 0, 205);
 
 $text-color: #121109;
 
