email field was added to profile with updating available. Change password was implemented in dane.

--- a/styles/Varablies.scss
+++ b/styles/Varablies.scss
@@ -96,6 +96,9 @@ $text-color: #121109;
   text-transform: uppercase;
   opacity: 1;
   transition-duration: 0.4s;
+  &:disabled{
+    background-color: white;
+  }
 }
 
 @mixin linkButton($height) {
