changePassword was added to dane

--- a/styles/Profile.module.scss
+++ b/styles/Profile.module.scss
@@ -23,4 +23,9 @@
             padding-top: 69.5px;
         }
     }
+    .buttonInput{
+        width: 226px !important;
+        margin-top: 20px;
+        margin-bottom: 50px;
+    }
 }
