--- a/styles/Dane.module.scss
+++ b/styles/Dane.module.scss
@@ -34,6 +34,11 @@
     }
 }
 
+.editBtnWrapper{
+    display: flex;
+    justify-content: flex-end;
+    width: 791px;
+}
 
 .noEditFields{
     display: flex;
@@ -57,6 +62,7 @@
 
 .editButton{
     @include buttonInput();
-    margin-top: 76px;
+    // margin-top: 76px;
+    margin-top: 4px;
 }
 
