--- a/styles/MenuContent.module.scss
+++ b/styles/MenuContent.module.scss
@@ -35,6 +35,7 @@ $cities-width: 450px;
             }
             &:hover{
                 color: $text-color;
+                cursor: pointer;
             }
         }
     }
