--- a/styles/Varablies.scss
+++ b/styles/Varablies.scss
@@ -96,11 +96,12 @@ $text-color: #121109;
   text-transform: uppercase;
   opacity: 1;
   transition-duration: 0.4s;
-  &:disabled{
-    background-color: white;
-  }
   &:hover{
     background-color: $text-color;
+  }
+  &:disabled{
+    background-color: white;
+    cursor: auto;
   }
 }
 
