--- a/styles/KontoPackages.module.scss
+++ b/styles/KontoPackages.module.scss
@@ -1,5 +1,25 @@
 @import './Varablies.scss';
 
+.header{
+    display: flex;
+    width: 85%;
+    justify-content: space-between;
+    align-items: center;
+    .mainPackageName{
+        // font-weight: bolder;
+        font-family: "Work Sans Black";
+    }
+    .packageName{
+        // color: #999999;
+    }
+    .endDate{
+        margin-left: 10px;
+    }
+    .updateBtn{
+        @include buttonInput();
+    }
+}
+
 .kontoPackages{
     margin-top: 30px;
     .packages{
