--- a/styles/Varablies.scss
+++ b/styles/Varablies.scss
@@ -4,11 +4,13 @@ $sidebar-width: 150px;
 
 $border: 1px solid #B9B9B9;
 
-$main-color: #E2C700;
+// $main-color: #E2C700;
 // $main-color: rgb(76, 99, 226);
+$main-color: #4CAED5;
 
-$solid-color: #CDAD00;
+// $solid-color: #CDAD00;
 // $solid-color: rgb(38, 0, 205);
+$solid-color: #4CAED5;
 
 $text-color: #121109;
 
