postgres functionality was added and some edits

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -150,7 +150,7 @@
         // color: #ffffff;
     }
     @media all and (max-width: 1300px){
-        font: normal normal 300 15px "Work Sans Light";
+        // font: normal normal 300 15px "Work Sans Light";
     }
   }
   .mainBlockWrapper{
@@ -372,7 +372,7 @@
     // width: 100%;
     min-width: 1240px;
     @media all and (max-width: 1300px){
-        display: none;
+        // display: none;
     }
 }
 
