--- a/styles/Block.module.scss
+++ b/styles/Block.module.scss
@@ -37,12 +37,12 @@ $block-height: 323px;
         // border-color: $main-color;
     }
     @media all and (max-width: 1300px){
-        width: 500px;
-        height: 430px;
+        // width: 500px;
+        // height: 430px;
     }
     @media all and (max-width: 1150px){
-        width: 450px;
-        height: 430px;
+        // width: 450px;
+        // height: 430px;
     }
 }
 
