--- a/styles/CennikChoices.module.scss
+++ b/styles/CennikChoices.module.scss
@@ -47,15 +47,32 @@
     box-shadow: 0px 15px 10px 6px rgba(0,0,0,0.75);
 }
 
-.slash{
+// .slash{
+//     position: absolute;
+//     right: 11.5rem;
+//     top: -15rem;
+//     color: rgb(226, 204, 0);
+//     // opacity: 0.1;
+//     font-size: 30rem;
+//     font-weight: bolder;
+//     letter-spacing: -11rem;
+// }
+
+.slashWrapper{
+    width: 100%;
+    height: 20rem;
     position: absolute;
-    right: 11.5rem;
-    top: -15rem;
-    color: rgb(226, 204, 0);
-    // opacity: 0.1;
-    font-size: 30rem;
-    font-weight: bolder;
-    letter-spacing: -11rem;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.slash{
+    background-color: yellow;
+    height: 40rem;
+    width: 30%;
+    transform: rotate(30deg);
 }
 
 .noslash{
