--- a/styles/Dane.module.scss
+++ b/styles/Dane.module.scss
@@ -9,10 +9,12 @@
     }
     .buttonInput{
         // margin-top: 20px;
+        flex: 1;
         height: 52px !important;
-        width: auto !important;
-        padding-left: 80px !important;
-        padding-right: 80px !important;
+        // width: auto !important;
+        // padding-left: 80px !important;
+        // padding-right: 80px !important;
+        margin-left: 10px;
         &:disabled{
             background-color: white;
             cursor: auto;
@@ -20,8 +22,9 @@
     }
     .cancelBtn{
         @include buttonInput();
+        flex: 1;
         margin-left: 10px;
-        margin-top: 10px;
+        margin-top: 14px;
         height: 52px;
         background-color: $text-color;
         color: white;
@@ -29,8 +32,17 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        padding-left: 20px;
-        padding-right: 20px;
+        // padding-left: 20px;
+        // padding-right: 20px;
+    }
+    .NIP{
+        flex: 1;
+    }
+    .threeColumns{
+        display: flex;
+    }
+    .title{
+        position: relative;
     }
 }
 
@@ -66,3 +78,25 @@
     margin-top: 4px;
 }
 
+.avatarUploader{
+    position: absolute;
+    top: -100px;
+    left: 686px;
+}
+
+.edit{
+    position: relative;
+}
+
+.logoImg{
+    position: absolute;
+    left: 686px;
+    top: -35px;
+    max-width: 104px;
+    max-height: 104px;
+}
+
+.editLogo{
+    max-width: 100%;
+    max-height: 100%;
+}
