--- a/styles/Footer.module.scss
+++ b/styles/Footer.module.scss
@@ -89,6 +89,7 @@
                 display: flex;
                 width: 200px;
                 justify-content: space-between;
+                padding-top: 40px;
             }
         }
     }
