init raw value added to updateSelectedDate

--- a/styles/Hours.module.scss
+++ b/styles/Hours.module.scss
@@ -43,6 +43,7 @@
     .start{
         // background-color: royalblue;
         background-color: $solid-color;
+        cursor: pointer;
     }
     
     .finish{
