--- a/styles/Calendar.module.scss
+++ b/styles/Calendar.module.scss
@@ -1,10 +1,11 @@
 .calendar{
     display: flex;
-    align-items: flex-start;
+    align-items: stretch;
     overflow: hidden;
     margin-top: 30px;
-    justify-content: space-between;
-    max-width: 1100px;
+    justify-content: flex-start;
+    // max-width: 1100px;
+    margin-bottom: 50px;
 }
 
 .own{
