--- a/styles/Display.module.scss
+++ b/styles/Display.module.scss
@@ -1,5 +1,14 @@
+@import './Varablies.scss';
+
 .display{
     position: relative;
+    .buttonInput{
+        @include buttonInput();
+        margin-top: 20px;
+        &:disabled{
+            background-color: white;
+        }
+    }
 }
 
 .canvasLogo{
@@ -11,4 +20,20 @@
 .editLogo{
     max-width: 100%;
     max-height: 100%;
+}
+
+.displayForm{
+    width: auto !important;
+}
+
+.description{
+    @include blockText();
+    margin-bottom: 20px;
+    padding: 0;
+}
+
+.altDescription{
+    @include blockText();
+    margin-top: 20px;
+    padding: 0;
 }
