--- a/styles/Pakiet.module.scss
+++ b/styles/Pakiet.module.scss
@@ -7,3 +7,19 @@
         @include profileText();
     }
 }
+
+.main{
+    display: flex;
+    margin-right: 20%;
+    margin-top: 40px;
+    margin-bottom: 80px;
+}
+
+.yourReservation{
+    width: 50%;
+    margin-right: 20px;
+}
+
+.display{
+    width: 50%;
+}
