--- a/styles/Rozliczenia.module.scss
+++ b/styles/Rozliczenia.module.scss
@@ -31,6 +31,10 @@
         width: 113px;
     }
     .fourthRow{
-        width: 195px
+        width: 126px;
+    }
+    .fifthRow{
+        width: 126px;
+        color: $main-color;
     }
 }
