--- a/styles/MenuContent.module.scss
+++ b/styles/MenuContent.module.scss
@@ -94,6 +94,9 @@ $cities-width: 450px;
 .textTwo{
     padding-bottom: 39.5px;
     width: 340px;
+    .bold{
+        padding-left: 10px;
+    }
 }
 
 .bold{
