--- a/styles/Hiring.module.scss
+++ b/styles/Hiring.module.scss
@@ -54,9 +54,14 @@
 }
 
 .nextBtn{
+    margin-left: 0;
+    width: 150px;
+}
+
+.nextBtnWrapper{
     position: fixed;
     bottom: 5%;
-    margin-left: 0;
+    display: flex;
 }
 
 .progressBar{
@@ -146,4 +151,21 @@
     letter-spacing: 0px;
     color: #FFFFFF;
     text-transform: lowercase;
+}
+
+.priceDiv{
+    @include blockTitle();
+    display: flex;
+    align-items: flex-end;
+    color: #ffffff;
+    padding: 0;
+    padding-bottom: 10px;
+    padding-right: 24px;
+    .priceLeft{
+        @include blockText();
+        color: #ffffff;
+        padding: 0;
+        padding-right: 5px;
+        font: normal normal 200 24px/35px "Work Sans Thin";
+    }
 }
