--- a/styles/Cennik.module.scss
+++ b/styles/Cennik.module.scss
@@ -27,7 +27,7 @@
 }
 
 .headerBoldFont{
-    font: normal normal 900 56px/66px "Work Sans Black";
+    font: normal normal normal 56px/66px "Work Sans Black";
     text-transform: uppercase;
 }
 
