--- a/styles/Block.module.scss
+++ b/styles/Block.module.scss
@@ -57,13 +57,13 @@ $block-height: 323px;
 }
 
 .blockLarge{
-    @include block(100%, 262px);
+    @include block(100%, auto);
     // margin-right: 16px;
     
 }
 
 .blockLargeNone{
-    @include block(692px, 262px);
+    @include block(692px, auto);
     border: 1px solid #B9B9B9;
     margin-right: 16px;
 }
