--- a/styles/Header.module.scss
+++ b/styles/Header.module.scss
@@ -47,6 +47,7 @@
 .header .button{
     @include linkButton(44px);
     margin-right: 20px;
+    background-color: $main-color;
 }
 
 .loginButton{
@@ -62,6 +63,8 @@
 .profileHeader .button{
     @include linkButton(44px);
     background: $main-color 0% 0% no-repeat padding-box;
+    width: auto;
+    padding: 0 20px;
     a{
         color: white;
     }
@@ -108,5 +111,20 @@
     opacity: 1;
 }
 
-
+.contacts{
+    align-items: flex-end;
+    display: flex;
+    flex-direction: column;
+    padding-right: 20px;
+    .email{
+        @include blockText();
+        padding: 0;
+        color: #ffffff;
+    }
+    .phone{
+        @include blockTitle();
+        padding: 0;
+        color: #ffffff;
+    }
+}
 
